--- a/scss/style.scss
+++ b/scss/style.scss
@@ -33,42 +33,30 @@ $header-font: calc($header-size / 3);
 * {
   box-sizing: border-box;
   outline: none;
-  // margin: 0;   // implement
-  // padding: 0;  // implement
+  margin: 0;
+  padding: 0;
   letter-spacing: -0.03em;
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
 }
 
 html,
 body {
-  margin: 0;
-  padding: 0;
   font-family: "Spartan", sans-serif;
 }
 
-body {
-  background: url("../assets/lizard/lizard.svg");
-  background-position: right bottom;
-  background-attachment: fixed;
-  background-size: 200px; // or 20%
-  background-repeat: no-repeat;
-}
-
-.dark-mode {
-  background: url("../assets/lizard/lizard_dark.svg");
-  background-color: $black;
-  background-position: right bottom;
-  background-attachment: fixed;
-  background-size: 200px; // or 20%
-  background-repeat: no-repeat;
-  color: white;
-}
-
-::-moz-selection { // sets color of element (usually text) selection
+::-moz-selection {
+  // sets color of element (usually text) selection
   background: $dark-gray;
   color: white;
 }
 
-::selection { // sets color of element (usually text) selection
+::selection {
+  // sets color of element (usually text) selection
   background: $dark-gray;
   color: white;
 }
@@ -83,6 +71,18 @@ a:link {
 }
 
 /* --------------------------------------------------------------------- */
+/* Dark Mode */
+/* --------------------------------------------------------------------- */
+.dark-mode {
+  background-color: $black;
+  background-position: right bottom;
+  background-attachment: fixed;
+  background-size: 200px; // or 20%
+  background-repeat: no-repeat;
+  color: white;
+}
+
+/* --------------------------------------------------------------------- */
 /* Header */
 /* --------------------------------------------------------------------- */
 #header {
@@ -93,8 +93,8 @@ a:link {
 
   font-weight: 600;
   font-size: $header-font;
-  align-items: center;
-  margin: 1rem 1rem 2rem 1rem;
+  // align-items: center;
+  margin: 1rem 1rem 1.5rem 1rem;
 
   #logo-name {
     display: flex;
@@ -128,41 +128,36 @@ a:link {
   #button-placeholder {
     // used for the menu button
     width: 0;
-    margin-left: 2.22rem;
+    margin-left: 3rem;
     background: white;
   }
 
   #dark {
     font-size: 1.9rem;
+    padding-top: 0.5rem;
     img {
-      padding-top: 0.43rem;
-      width: 90.5%;
+      height: 82%;
+      pointer-events: none;
     }
   }
 }
 
 /* --------------------------------------------------------------------- */
-/* Component Labels */
+/* Titles & Labels */
 /* --------------------------------------------------------------------- */
-div {
-  h2 {
-    // color: white;
-    text-align: center;
-    font-size: 1.5rem;
-    font-weight: 600;
-    // padding-top: 0.3rem;
-    cursor: pointer;
-    // border-bottom: 1px solid $cyan;
-  }
+
+.title {
+      text-align: center;
+      font-size: 1.5rem;
+      font-weight: 600;
+      cursor: pointer;
 }
 
 .label {
-  p {
-    font-weight: 600;
-    margin: 0 0 0.3rem 0;
-    font-size: 0.9rem;
-    text-align: left;
-  }
+  font-weight: 600;
+  margin: 0 0 0.1rem 0;
+  font-size: 0.9rem;
+  min-width: fit-content;
 }
 
 .section {
@@ -179,14 +174,9 @@ div {
   flex-direction: column;
   align-items: center;
   width: fit-content;
-  text-align: center;
+  // text-align: center;
   padding: 0.5rem;
 }
-
-// .components {
-//   display: flex;
-//   flex-direction: column;
-// }
 
 /* --------------------------------------------------------------------- */
 /* Panel */
@@ -214,7 +204,7 @@ div {
 /* --------------------------------------------------------------------- */
 /* Synth Section */
 /* --------------------------------------------------------------------- */
-#synth {
+#synth-section {
   //2
   grid-column: 1 / 2;
   grid-row: 2;
@@ -224,7 +214,7 @@ div {
   }
 }
 
-#main {
+#synth-section-main {
   display: flex;
   justify-content: space-evenly;
   // border: 3px solid $cyan;
@@ -503,7 +493,7 @@ div {
   display: block;
   // text-transform: uppercase;
   transition: color 0.1s;
-  color: $blue
+  color: $blue;
 }
 
 #nav-content li a:hover {
