--- a/css/style.css
+++ b/css/style.css
@@ -133,10 +133,12 @@ a:link {
   font-size: 1.5rem;
   font-weight: 600;
   cursor: pointer;
+  margin-bottom: 0.2rem;
 }
 
 .subtitle {
   font-size: 1.2rem;
+  margin: 0.3rem 0 0.1rem;
 }
 
 .label {
